package it.unibo.antsim.world;

/*
* Rappresents an discrete index (row, column) inside the grid of the environment*/
public record CellIndex(int row, int column) {
}
